test/sc++/error/mesh-indirect-ptr.scpp
../../scc/error/mesh-indirect-ptr.sc